feat: 编辑todo和完成todo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header><h1>Todo List</h1></header>
         <form class="form">
             <input/>
-            <button>submit</button>
+            <button class="btn-submit">submit</button>
         </form>
         <div>
             <ul class="todo-list">
